src/objects/Group_Resource__c.object
<CustomObject>
    <description>Group Resource</description>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Type</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Group Resource</relationshipLabel>
        <relationshipName>Group_Resource</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Group Resource</relationshipLabel>
        <relationshipName>Group_Resource</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Group Resource</label>
    <nameField>
        <displayFormat>GR-{0000}</displayFormat>
        <label>Group Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Resource</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>